# supabase-query-alert

./: .gitignore  pyproject.toml
docs/: ARCHITECTURE.md  HOSTED_SETUP.md
scripts/: capture_logs.sh
src/supabase_query_alert/: __init__.py
src/supabase_query_alert/analyzers/: __init__.py  base.py  data_exfiltration.py  registry.py  sql_injection.py  volume_anomaly.py
src/supabase_query_alert/api/: __init__.py  client.py  exceptions.py  models.py
src/supabase_query_alert/core/: __init__.py  pipeline.py
src/supabase_query_alert/domain/: __init__.py  models.py
src/supabase_query_alert/input/: __init__.py  base.py  manual.py
src/supabase_query_alert/input/logfile/: __init__.py  adapter.py  parser.py
src/supabase_query_alert/input/supabase/: __init__.py  adapter.py  client.py  parser.py
src/supabase_query_alert/output/: __init__.py  base.py  console.py  sqs.py
supabase/: config.toml  seed.sql
supabase/migrations/: 00000000000000_pgaudit_setup.sql  00000000000001_create_tables.sql
tests/integration/: test_adapter_pattern.py  test_logfile_pipeline.py  test_pipeline.py  test_supabase_e2e.py
tests/unit/: test_analyzers.py  test_data_exfiltration.py  test_domain.py  test_input.py  test_logfile_input.py  test_logfile_parser.py  test_management_client.py  test_manual_input.py  test_output.py  test_sql_injection.py  test_sqs_output.py  test_supabase_adapter.py  test_supabase_client.py  test_supabase_parser.py  test_volume_anomaly.py
